- libero.lua: the plugin chooses from more web servers
- changed predefined link for FreePOPs RSS in aggregator
- fixed chroot jail creatin (/etc/freepops/config.lua was not created)
- changed debian copyright with the new FSF address
- relaxed mlex checking to not call abort but fail more gracefully
- added patch for building on Solaris (thanks Alfredo Pena)
- changed manual to GPL license to allow it to stay in Debian/etch
- init script for debian is now lsb-compliant
- changed debian init script shell to bash
- fixed some typo in xml2table.lua
13/07/2005 0.0.31
- fixed config.lua com.uk -> co.uk
- yahoo.lua: Fixed an issue where the yahoo new mail indicator wasn't being reset after a session. Also, fixed an error when a yahoo session expires and it regenerates the base url in STAT. (russell822)
- juno.lua: Added the resetheaders parameter to turn off full headers during QUIT. Also, removed the sorting options from the message list which aren't needed. (russell822)
- es: *** empty log message *** (lisar314)
- es, fr: changed gentoo (no more ebuild provided) (gareuselesinge)
- fr: *** empty log message *** (fvancaen)
- mailcom.lua: added domain 'italymail.com' to mailcom.lua plugin (alessiofender)
- added patch for libero.it (thanks Oreste Salerno)
- Gentoo init script now uses -s option to drop privileges (by Daniel Black)
- fixed std file permissions in the tarball (should help Gentoo)
- fixed debian init script
- fixed error message if you type just quit (thanks rami)
- luabind and curl_lua are now double licensed under GPL and MIT to make the
LUA community happy.
29/06/2005 0.0.30
- removed luafull
- moved xml2tex to modules/ and now is executed with -e (no more luafull)
- mail2world.lua is now official
- fixed libero multipage stat
- aol.lua, mailcom.lua: changed homepage to http://www.freepops.org (alessiofender)
- es: *** empty log message *** (lisar314)
- fr: *** empty log message *** (fvancaen)
- aol.lua: fixed aol change to aol.com domain (russell822)