@@ -1,3 +1,4 @@
+- libero.lua: new mlex to better identify the message list 
 - libero.lua: the plugin chooses from more web servers
 - changed predefined link for FreePOPs RSS in aggregator
 - fixed chroot jail creatin (/etc/freepops/config.lua was not created)
